[package]
name = "rsevents-extra"
description = "Synchronization objects built on top of rsevents. Semaphore, countdown event, and more."
version = "0.2.0"
edition = "2018"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>",
		"NeoSmart Technologies <https://neosmart.net/>"]
homepage = "https://github.com/neosmart/rsevents-extra"
repository = "https://github.com/neosmart/rsevents-extra"
readme = "README.md"
keywords = ["synchronization", "events", "countdown"]
categories = ["concurrency", "asynchronous"]
license = "MIT"
documentation = "https://docs.rs/rsevents-extra/latest/rsevents_extra/"

[dependencies]
rsevents = { version = "0.3.1" }
